--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 /node_modules
-src/utils/appdetails.ts
+
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
